Alignment Fix

--- a/style.css
+++ b/style.css
@@ -283,6 +283,7 @@ main section {
 
     #sidebartop {
         margin-bottom: 30px;
+        margin-top:70px;
         height: auto;
     }
 
